--- a/paper/related-work/adoption/gradle-junit.tex
+++ b/paper/related-work/adoption/gradle-junit.tex
@@ -7,7 +7,7 @@ Gradle\footnote{\url{https://gradle.org}} is a dependency manager and developmen
 
 	\item \textbf{Prioritise failed test cases:} Gradle provides a second useful test class processor: the \texttt{RunPreviousFailedFirstTestClassProcessor}. This processor will prioritise test cases that have failed in the previous run. This practice is similar to the ROCKET-algorithm (\cref{ssec:alg-rocket}), but the processor does not take into account the duration of the test cases.
 	
-	\item \textbf{Test order specification:} \junit{} allows us to specify the sequence in which it will execute the test cases. By default, it uses a random yet deterministic order\footnote{\url{https://junit.org/junit5/docs/current/user-guide/\#writing-tests-test-execution-order}}. The order can be manipulated by annotating the test class with the \texttt{@TestMethodOrder}-annotation, or by applying the \texttt{@Order(int)}-annotation to an individual test case. However, we can only use this feature to alter the order of test cases within the same test class. \junit{} does not support inter-test class reordering. We could use this feature to (locally) sort test cases based on their execution time.
+	\item \textbf{Test order specification:} \junit{} allows us to specify the sequence in which it will execute the test cases. By default, it uses a random yet deterministic order\footnote{\url{https://junit.org/junit5/docs/current/user-guide/}}. The order can be manipulated by annotating the test class with the \texttt{@TestMethodOrder}-annotation, or by applying the \texttt{@Order(int)}-annotation to an individual test case. However, we can only use this feature to alter the order of test cases within the same test class. \junit{} does not support inter-test class reordering. We could use this feature to (locally) sort test cases based on their execution time.
 \end{enumerate}
 
 \begin{figure}[htbp!]
