--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -2,6 +2,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage[dutch, english]{babel}
+\usepackage[T1]{fontenc}
 \usepackage{afterpage}
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -68,18 +69,8 @@
 	\renewcommand{\footrulewidth}{0pt}
 }
 
-% Meta-information.
-\hypersetup{
-	pdfauthor = {Pieter De Clercq},
-	pdftitle = {Optimising Continuous Integration using Test Case Prioritisation},
-	pdfsubject = {Master's dissertation submitted in order to obtain the academic degree of Master of Science in Computer Science, june 2020}
-}
-
-% Mathematical definitions.
-\theoremstyle{break}
-\newtheorem{definition}{Definition}
-
-% Custom colors
+% Colours.
+\definecolor{black}{RGB}{0, 0, 0}
 \definecolor{bisque}{HTML}{FFE4C4}
 \definecolor{code-background}{HTML}{EEEEEE}
 \definecolor{code-delim}{RGB}{20,105,176}
@@ -87,10 +78,26 @@
 \definecolor{groovyblue}{HTML}{0000A0}
 \definecolor{groovygreen}{HTML}{008000}
 \colorlet{code-punct}{red!60!black}
+\definecolor{ugent-blue}{RGB}{30, 100, 200}
+
+% Meta-information.
+\hypersetup{
+	pdfauthor = {Pieter De Clercq},
+	pdftitle = {Optimising Continuous Integration using Test Case Prioritisation},
+	pdfsubject = {Master's dissertation submitted in order to obtain the academic degree of Master of Science in Computer Science, june 2020},
+	linkcolor = black,
+	citecolor = ugent-blue,
+	urlcolor = ugent-blue,
+	colorlinks = true,
+}
+
+% Mathematical definitions.
+\theoremstyle{break}
+\newtheorem{definition}{Definition}
 
 % Code listings.
 \lstdefinelanguage{Groovy}[]{Java}{
-	basicstyle=\normalfont\ttfamily,
+	basicstyle=\ttfamily\selectfont,
 	numbers=left,
 	numberstyle=\scriptsize,
 	stepnumber=1,
@@ -154,8 +161,19 @@
 \newacronym{tsm}{TSM}{\tsm}
 \newacronym{vcs}{VCS}{\vcs}
 
+% Fix hyphenation.
+\brokenpenalty=1000
+\babelhyphenation[dutch]{Java}
+\babelhyphenation[dutch]{Python}
+\babelhyphenation[dutch]{VeloCIty}
+\babelhyphenation[english]{Java}
+\babelhyphenation[english]{Python}
+\babelhyphenation[english]{VeloCIty}
+
 % Glossary items.
 \newglossaryentry{mapreduce}{name={MapReduce},description={a programming paradigm that allows large amounts of data to be processed in a distributed manner}}
+\newglossaryentry{rest}{name={REST},description={Representational State Transfer is an architectural design pattern used by modern web applications. This design pattern encourages standardised communication using existing HTTP methods}}
+\newglossaryentry{velocity}{name={\velocity{}},description={a prioritisation framework which has been implemented in this thesis}}
 
 \begin{document}
 \onehalfspacing
@@ -163,52 +181,52 @@
 % Titlepage.
 \frontmatter
 \pagestyle{empty}
-\includepdf[pages=-]{titlepage.pdf}
+%\includepdf[pages=-]{titlepage.pdf}
 
-\blankpage{}
+%\blankpage{}
 
 % Admission.
-\input{admission.tex}
+%\input{admission.tex}
 \clearpage
 
 % Acknowledgements.
-\input{acknowledgements.tex}
+%\input{acknowledgements.tex}
 
 % Summaries.
 \selectlanguage{english}
-\input{summary/english.tex}
+%\input{summary/english.tex}
 \clearpage
 \selectlanguage{dutch}
-\input{summary/dutch.tex}
+%\input{summary/dutch.tex}
 \clearpage
 \selectlanguage{english}
 
 % Extended abstracts.
 \addcontentsline{toc}{chapter}{Extended abstract}
-\includepdf[pages=-]{abstract-en/extended-abstract.pdf}
+%\includepdf[pages=-]{abstract-en/extended-abstract.pdf}
 \addcontentsline{toc}{chapter}{Extended abstract (Dutch)}
-\includepdf[pages=-]{abstract-nl/extended-abstract.pdf}
+%\includepdf[pages=-]{abstract-nl/extended-abstract.pdf}
 
 % Vulgarising summary.
 \pagestyle{plain}
-\input{summary/lay.tex}
+%\input{summary/lay.tex}
 \clearpage
 
 \pagestyle{fancy}
 
-\blankpage{}
+%\blankpage{}
 
 % ToC.
-\tableofcontents
+%\tableofcontents
 
 % Corpus.
 \mainmatter
 
 \input{glossary.tex}
 \clearpage
-\input{introduction.tex}
+%\input{introduction.tex}
 \clearpage
-\input{software-engineering.tex}
+%\input{software-engineering.tex}
 \clearpage
 \input{related-work.tex}
 \clearpage
@@ -216,16 +234,16 @@
 \clearpage
 \input{evaluation.tex}
 \clearpage
-\input{conclusion.tex}
+%\input{conclusion.tex}
 \clearpage
 \input{bibliography.tex}
 \clearpage
-\input{list-of-figures.tex}
+%\input{list-of-figures.tex}
 \clearpage
-\input{list-of-listings.tex}
+%\input{list-of-listings.tex}
 \clearpage
-\input{list-of-tables.tex}
+%\input{list-of-tables.tex}
 \clearpage
-\input{appendices.tex}
+%\input{appendices.tex}
 
 \end{document}
